<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BluetoothDialogDiscovery" >

    <TextView
        android:id="@+id/discovery_pairedDevices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#666666"
        android:paddingLeft="5dp"
        android:text="@string/discovery_pairedDevices"
        android:textColor="#FFFFFF"
        android:visibility="gone" />

    <ListView
        android:id="@+id/discovery_pairedDevicesList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:stackFromBottom="true" />

    <TextView
        android:id="@+id/discovery_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#666666"
        android:paddingLeft="5dp"
        android:text="@string/discovery_devices"
        android:textColor="#FFFFFF"
        android:visibility="gone" />

    <ListView
        android:id="@+id/discovery_deviceList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:stackFromBottom="true" />

    <Button
        android:id="@+id/discovery_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/discovery_scan" />

</LinearLayout>